[package]
name = "vxs"
edition = "2021"
version = "0.1.0"
rust-version = "1.60.0"
description = "vxs is a kv blob database."
homepage = "https://github.com/michaelgrigoryan25/vxs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
opt-level = 3
strip = "debuginfo"

[dependencies]
structopt = "0"
tokio = { version = "1", features = [
    "rt",
    "net",
    "time",
    "macros",
    "signal",
    "rt-multi-thread",
] }
