[package]
name = "vxs"
edition = "2021"
version = "0.1.0"
rust-version = "1.60.0"
description = "vxs is a kv blob database."
homepage = "https://github.com/michaelgrigoryan25/vxs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
opt-level = 3
strip = "debuginfo"

[dependencies]
log = "0"
fern = "0"
bytes = "1"
chrono = "0"
bincode = "1"
backtrace = "0"
structopt = "0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
