[package]
edition = "2021"
version = "0.1.0"
name = "vxs-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
hyper = "0.14"
routerify = "3.0"
lazy_static = "1.4"
fern = { version = "0.6" }
tokio = { version = "1.18", features = [
    "rt",
    "macros",
    "process",
    "rt-multi-thread",
] }
log = { version = "0.4", features = ["std"] }
prometheus = { version = "0.13", features = ["push", "process"] }

vxs-cli = { path = "../vxs-cli" }
